// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReconScanStatusBadge > matches ar (RTL) snapshot 1`] = `
<div>
  <div
    class="rounded-full px-2.5 py-0.5 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 inline-flex items-center gap-1.5 text-xs font-medium border bg-blue-50 text-blue-900 dark:bg-blue-900/20 dark:text-blue-300 border-blue-200 dark:border-blue-800"
    data-testid="scan-status-badge-running"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-loader-circle h-3 w-3 animate-spin"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
    <span>
      قيد التشغيل
    </span>
  </div>
</div>
`;

exports[`ReconScanStatusBadge > matches en snapshot 1`] = `
<div>
  <div
    class="rounded-full px-2.5 py-0.5 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 inline-flex items-center gap-1.5 text-xs font-medium border bg-blue-50 text-blue-900 dark:bg-blue-900/20 dark:text-blue-300 border-blue-200 dark:border-blue-800"
    data-testid="scan-status-badge-running"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-loader-circle h-3 w-3 animate-spin"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
    <span>
      Running
    </span>
  </div>
</div>
`;
